next-gen-routes/multi-vip/ocp-route/cafe/insecure/route-coffee.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5tnr: "true"
  name: cafe-coffee
  namespace: cafe
spec:
  host: cafe.example.com
  path: "/coffee"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: coffee-svc
